# substrate-talk-blog

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/blog/: Cargo.toml
pallets/blog/src/: benchmarking.rs  lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
